Fix scrollbar issue; Enlarge chat-input area for desktop and laptop with responsivity

--- a/agrichat-frontend/style.css
+++ b/agrichat-frontend/style.css
@@ -272,6 +272,8 @@ body.sidebar-collapsed {
 
 .main-header {
   position: fixed;
+  width: 100vw;
+  max-width: 100vw;
   z-index: 100;
 
   background: var(--white);
@@ -283,8 +285,8 @@ body.sidebar-collapsed {
   box-shadow: 0 2px 10px var(--shadow);
 
   /* To make scrollbar visible */
-  width: calc(100vw - 14px);
-  max-width: calc(100vw - 14px);
+  /* width: calc(100vw - 17px);
+  max-width: calc(100vw - 17px); */
 }
 
 .header-left {
